--- a/cluster-autoscaler/Dockerfile
+++ b/cluster-autoscaler/Dockerfile
@@ -18,7 +18,7 @@ LABEL maintainer="Marcin Wielgus <mwielgus@google.com>"
 ENV DEBIAN_FRONTEND noninteractive
 RUN clean-install ca-certificates
 
-ADD bin/rel/cluster-autoscaler cluster-autoscaler
+ADD rel/cluster-autoscaler cluster-autoscaler
 ADD run.sh run.sh
 
 CMD ./run.sh
