replace 'variants' with 'jobs'

--- a/branch.cfg
+++ b/branch.cfg
@@ -5,7 +5,7 @@ cfgs:
     branches: ['rel-.*']
     inherit:
       autoscaler:
-        variants:
+        jobs:
           release:
             traits:
               release:
