Change the default branch

--- a/branch.cfg
+++ b/branch.cfg
@@ -1,6 +1,6 @@
 cfgs:
   default:
-    branches: ['machine-controller-manager', 'machine-controller-manager-provider']
+    branches: ['machine-controller-manager-provider']
   release-branches:
     branches: ['rel-.*']
     inherit:
